[package]
name = "bevy_baseview"
version = "0.1.0"
edition = "2021"
description = "A baseview window and input backend for Bevy Engine"
# homepage = "todo"
# repository = "https://github.com/todo"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "baseview", "gui"]

[features]
default = ["opengl"]

opengl = ["baseview/opengl"]

[dependencies]
# baseview = { path = "../../baseview" }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "579130ecb4f9f315ae52190af42f0ea46aeaa4a2" }
rwh_05 = { package = "raw-window-handle", version = "0.5"}
rwh_06 = { package = "raw-window-handle", version = "0.6"}
lazy_static = "1.4.0"
# bevy = { path = "../../bevy", version = "0.8.*" }
bevy = { version = "0.14" }
log = { version = "0.4.17" }
keyboard-types = { version = "0.6.1", default-features = false }

[dev-dependencies]
# bevy = { path = "../../bevy", version = "0.8.*" }
bevy = { version = "0.14" }
winit = { version = "0.28" }
sickle_ui = "0.2.3"