[package]
name = "bevy_baseview"
version = "0.1.0"
edition = "2021"
description = "A baseview window and input backend for Bevy Engine"
# homepage = "todo"
# repository = "https://github.com/todo"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "baseview", "gui"]

[features]
default = ["opengl"]

opengl = ["baseview/opengl"]

[dependencies]
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "579130ecb4f9f315ae52190af42f0ea46aeaa4a2" }
rwh_05 = { package = "raw-window-handle", version = "0.5"}
rwh_06 = { package = "raw-window-handle", version = "0.6"}

bevy = { version = "0.15.0-rc.2", default-features = false, features = [
  "animation",
  "bevy_asset",
  "bevy_state",
  "bevy_color",
  "bevy_scene",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "multi_threaded",
  "png",
  "hdr",
  "vorbis",
  "x11",
  "bevy_gizmos",
  "tonemapping_luts",
  "smaa_luts",
  "default_font"
]}
log = { version = "0.4.17" }
keyboard-types = { version = "0.6.1", default-features = false }

[dev-dependencies]
winit = { version = "0.28" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3